<resources>
    <string name="app_name">UNIVERSICAR</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="registrar">Registrar</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="accionregistrar">Register</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing emailcompletions."
    </string>

    <string name="title_activity_register">Register</string>









    <string name="action_settings">Settings</string>
    <string name="action_viewpager">ViewPager</string>
    <string name="action_list">List</string>
    <string name="title_activity_view_pager">ViewPagerActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_arc_in_fragment">ArcInFragment</string>
    <string name="action_arc_tab">Arc Fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigator">Navigator</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>



    <string name="openDrawer">Menu abierto</string>
    <string name="closeDrawer">Menu cerrado</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment1">Fragment 1</string>
    <string name="fragment3">Fragment 3</string>
    <string name="fragment2">Fragment 2</string>










</resources>
